--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <div class="wrapper">
 
-        <dir class="box  item1">   Onr     </dir>
+        <dir class="box  item1">   One    </dir>
         <dir class="box item2">    Two    </dir>
         <dir class="box item3">    Three    </dir>
         <dir class="box item4">   Four     </dir>
